# mlx_sam3

./: .gitignore  README.md  bld.sh  main.py  mlx_sam3.code-workspace  mlx_sam3.postman_collection.json  pyproject.toml  run.sh
app/: README.md  run.sh
app/backend/: .gitignore  main.py  requirements.txt  segment_layers_card.dart  services.py
app/frontend/: .cursorrules  pubspec.yaml
app/frontend/lib/: layer_state.dart  layered_segmentation_canvas.dart  main.dart  main4.dart  segment_layers_card.dart
app/frontend/lib/services/: api_service.dart
app/frontend/src/app/: layout.tsx
app/frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
app/frontend/test/: widget_test.dart
app/react/: .gitignore  package-lock.json  package.json
app/react/src/app/: globals.css  page.tsx
app/react/src/components/: SegmentationCanvas.tsx
app/react/src/lib/: api.ts
examples/: sam3_iamge_interactive copy.ipynb  sam3_iamge_interactive.ipynb  sam3_image_predictor_example.ipynb
sam3/: convert.py  model_builder.py  utils.py  visualization_utils.py
sam3/model/: box_ops.py  data_misc.py  decoder.py  encoder.py  geometry_encoders.py  grid_sample_mlx.py  maskformer_segmentation.py  model_misc.py  necks.py  position_encoding.py  roi_align.py  sam3_image.py  sam3_image_processor.py  text_encoder_ve.py  tokenizer_ve.py  vitdet.py  vl_combiner.py
